目录结构调整   GYX